# rust-callgraphs

./: .gitignore  README.md
new/: Cargo.toml  rust-toolchain
new/database/: Cargo.toml
new/database-dsl/: Cargo.toml
new/database-dsl/src/: ast.rs  generator.rs  lib.rs  parser.rs
new/database/src/: data_structures.rs  lib.rs  schema.dl
new/extractor/: Cargo.toml
new/extractor/src/: check_unsafety.rs  converters.rs  hir_visitor.rs  lib.rs  main.rs  mir_visitor.rs  mirai_utils.rs  table_filler.rs
new/manager/: Cargo.toml
new/manager/src/: compilation.rs  database.rs  lib.rs  local_archive.rs  main.rs  sources_list.rs  top_crates.rs
src/: .gitignore  Cargo.toml
src/analysis/: Cargo.toml
src/analysis/src/: analysis.rs  callgraph.rs  info.rs  lib.rs  main.rs  types.rs
src/database/: Cargo.toml  build.rs
src/database-dsl/: Cargo.toml
src/database-dsl/src/: ast.rs  generator.rs
src/database/src/: data_structures.rs  schema.dl  storage.rs
src/extractor/src/: check_unsafety.rs  converters.rs  hir_visitor.rs  lib.rs  main.rs  mir_visitor.rs  mirai_utils.rs  table_filler.rs
src/manager/: Cargo.toml
src/manager/src/: compilation.rs  database.rs  lib.rs  main.rs
