[package]
name = "corpus-manager"
version = "0.1.0"
authors = ["Vytautas Astrauskas <vytautas.astrauskas@inf.ethz.ch>"]
edition = "2018"
default-run = "corpus-manager-driver"
build = "build.rs"
license = "MIT"

[lib]

[[bin]]
name = "corpus-manager-driver"
test = false
path = "src/main.rs"

[dependencies]
corpus-extractor = { path = "../extractor" }
corpus-common = { path = "../common" }
structopt = "0.2.18"
color-backtrace = { version = "0.2" }
log = "0.4.0"
simplelog = "^0.6.0"
chrono = "0.4.7"
reqwest = "0.9.0"
serde = "1.0.1"
serde_derive = "1.0.1"
serde_json = "1.0.0"
toml = "0.5.1"
log-derive = "0.3.0"
semver = "0.9.0"
cargo = "0.37.0"
tokio-process = "0.2.4"
tokio = "0.1.22"
nix = "0.14.1"
failure = "0.1.5"
walkdir = "2"
