[package]
name = "analysis"
version = "0.1.0"
authors = ["vagrant"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
corpus-database = { path = "../database" }
corpus-manager = { path = "../manager" }
serde = "1.0.104"
serde_json = "1.0.47"
structopt = "0.3"